--- a/qr3/properties/socialintg.properties
+++ b/qr3/properties/socialintg.properties
@@ -1,4 +1,4 @@
-facebook.frontpage.url=http://www.tangotab.com/jsp/index.jsp
+ssfacebook.frontpage.url=http://www.tangotab.com/jsp/index.jsp
 twitter.frontpage.url=http://www.tangotab.com/jsp/index.jsp
 
 socialintg.tangotab.image.url=http://www.tangotab.com/images/logo.png
